Fix the focus on navigation links to be more visible

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ html {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 }
 
-.masthead a {
+.masthead a:focus {
   outline-color: #fff;
 }
 
